<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.inaumov.mybar</groupId>
    <artifactId>MyBar-server</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>MyBar Server -- Project</name>

    <inceptionYear>2013</inceptionYear>

    <organization>
        <name>Igor Naumov</name>
        <url>http://inaumov.com</url>
    </organization>

    <issueManagement>
        <url>https://github.com/inaumov/MyBar-web/issues</url>
    </issueManagement>

    <prerequisites>
        <maven>3.3.3</maven>
    </prerequisites>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>

        <spring.version>4.1.6.RELEASE</spring.version>
        <spring.security.version>4.0.1.RELEASE</spring.security.version>
        <hibernate.version>4.3.11.Final</hibernate.version>
        <servlet-api.version>3.1.0</servlet-api.version>
        <spring-test-dbunit.version>1.2.1</spring-test-dbunit.version>
        <junit.version>4.12</junit.version>
        <dbunit.version>2.4.9</dbunit.version>
        <hsqldb.version>2.3.3</hsqldb.version>
        <slf4j-api.version>1.7.12</slf4j-api.version>
        <guava.version>19.0</guava.version>
        <hamcrest-all.version>1.3</hamcrest-all.version>
        <json-path.version>0.8.1</json-path.version>
        <jackson-databind.version>2.5.3</jackson-databind.version>
        <mockito-core.version>1.9.5</mockito-core.version>
        <lombok.version>1.16.16</lombok.version>
        <mysql-connector-java.version>5.1.42</mysql-connector-java.version>
        <jetty-maven-plugin.latest>9.4.6.v20170531</jetty-maven-plugin.latest>
    </properties>

    <modules>
        <module>core</module>
        <module>web</module>
    </modules>

    <dependencyManagement>
        <dependencies>

            <!-- core / jpa -->
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-entitymanager</artifactId>
                <version>${hibernate.version}</version>
            </dependency>

            <!-- Spring framework -->
            <!-- https://mvnrepository.com/artifact/org.springframework/spring-framework-bom -->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-framework-bom</artifactId>
                <version>${spring.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Security -->
            <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-bom -->
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-bom</artifactId>
                <version>${spring.security.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql-connector-java.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hsqldb</groupId>
                <artifactId>hsqldb</artifactId>
                <version>${hsqldb.version}</version>
            </dependency>

            <!-- logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>${slf4j-api.version}</version>
            </dependency>

            <!-- test -->
            <dependency>
                <groupId>com.github.springtestdbunit</groupId>
                <artifactId>spring-test-dbunit</artifactId>
                <version>${spring-test-dbunit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-all</artifactId>
                <version>${hamcrest-all.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.dbunit</groupId>
                <artifactId>dbunit</artifactId>
                <version>${dbunit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.6.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.eclipse.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <version>${jetty-maven-plugin.latest}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>